ToDo / Roadmap
 - open recent project
 - key up/down/left/right + menu to change from image to image
 - menu for adding/removing images
 - key "delete" deletes an image
 - handle empty images (placeholder) differently
 - Load images for Icons in background
 - Implement disable filter
 - Add ability to scale resulting images after cropping
 - progress dialog while exporting / loading
 - Display page preview instead of original image in image list
 - drag and drop in the image list
 - Filter to fix color / convert to black & white...

2012****; YASW 0.2
 - export to pdf
 - a lot of small fixes in handling to pages types (even/odd)
 - cleaning old code away (only one page type handling)

20121006; YASW 0.1
 - First release
 - handling two page types (left/right)
 - Saving / Loading project Settings
 - Exporting project to images
 - Propaging page/image settings to other pages/images
