@@ -10,7 +10,8 @@ ToDo / Roadmap
  - progress dialog while exporting / loading
  - Display page preview instead of original image in image list
  - drag and drop in the image list
- - Filter to fix color / convert to black & white...
+ - Filter to fix image color / convert to black & white...
+ - move image up/down could be merged in 2 buttons instead of 4
 
 2012****; YASW 0.2
  - export to pdf
